# c-textprocessing

./: .gitignore  CMakeLists.txt  README.md  test.c  tests.h  textreader.c  textreader.h  textreader_test.c
examples/: CMakeLists.txt  windows-read-unicode-stdin.c  winnix-read-unicode-stdin.c
include/textprocessing/: textprocessing.h  textreader.h  textstream.h  unicode_utils.h
src/: textprocessing.c  textreader.c  textstream.c
tests/: generate_other_encodings.py  utf-16-be-bom.txt  utf-16-be.txt  utf-16-le-bom.txt  utf-16-le.txt  utf-8-bom.txt
